# crewai_researcher

./: .env.example  .gitignore  README.md  pyproject.toml
src/crewai_researcher/: crew.py  main.py
