[project]
name = "crewai_researcher"
version = "0.1.0"
description = "crewai_researcher using crewAI"
authors = [{ name = "Thirumal murugan Palaniapillai", email = "" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.8.0"
]

[project.scripts]
crewai_researcher = "crewai_researcher.main:run"
run_crew = "crewai_researcher.main:run"
train = "crewai_researcher.main:train"
replay = "crewai_researcher.main:replay"
test = "crewai_researcher.main:test"
run_with_trigger = "crewai_researcher.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
